Istio-Japan/Istio - Japan - OLD/5_Expose_Service/virtualservice_guestbook.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-virtualservice
  # namespace: default
spec:
  hosts:
  - "*"
  gateways: # using gateways field, it'll be exposed externally
  - guestbook-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend # specify service name
        port:
          number: 80
